objects/Unique_RFPs__c.object
<CustomObject>
    <fields>
        <fullName>ADR__c</fullName>
        <label>ADR</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Attendee_count__c</fullName>
        <label>Actual Attendee count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Event_Duration_Number_of_Days__c</fullName>
        <label>Actual Event Duration (Number of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_PA_Economic_Value__c</fullName>
        <label>Actual PA Economic Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_RFP_Type__c</fullName>
        <label>Actual RFP Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting Space and Sleeping Rooms</fullName>
                </value>
                <value>
                    <fullName>Meeting Space Only</fullName>
                </value>
                <value>
                    <fullName>Restaurant RFP</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Sleeping Rooms Only</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_RFP_Value__c</fullName>
        <formula>IF( Duplicate_RFP__c  = True,0,IF( Expo_Festival_Exhibition_RFP__c = True,  of_Events_covered_under_the_RFP__c  * Actual_Event_Duration_Number_of_Days__c  *  (Actual_Attendee_count__c  * 12.032 * 0.80),
Case(RFP_Type__c, "Restaurant RFP", 50 * Actual_Attendee_count__c, "Sleeping Rooms Only", 140 * Actual_Total_Room_Nights__c *1.35, "Meeting Space and Sleeping Rooms", (140 * Actual_Total_Room_Nights__c *1.35)+( Actual_Attendee_count__c * Actual_Event_Duration_Number_of_Days__c *20) , 
"Meeting Space Only", 20 * Actual_Attendee_count__c *Actual_Event_Duration_Number_of_Days__c,0 )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual RFP Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Total_Room_Nights__c</fullName>
        <label>Actual Total Room Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adoption_Experts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adoption Experts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Count__c</fullName>
        <label>Attendee Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Attendee_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Attendee Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Event_Duration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Event Duration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Missing_SR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Missing SR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Status__c</fullName>
        <label>Audit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audit Completed</fullName>
                </value>
                <value>
                    <fullName>No Audit Needed</fullName>
                    <default>true</default>
                    <label>No Audit Needed</label>
                </value>
                <value>
                    <fullName>To be Audited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audited_EV__c</fullName>
        <formula>IF(
Outlier_RFP__c=TRUE,
CASE(Actual_RFP_Type__c,
"Restaurant RFP",
(Actual_Attendee_count__c * 10),
"Request for Information",
(Actual_Attendee_count__c * 0),
"Service Provider",0,
"Sleeping Rooms Only",
(Actual_Total_Room_Nights__c*ADR__c),
"Meeting Space and Sleeping Rooms",
(
(Actual_Total_Room_Nights__c*ADR__c)
+
(Actual_Attendee_count__c *Actual_Event_Duration_Number_of_Days__c*10)
),
"Meeting Space Only",
(Actual_Attendee_count__c * Actual_Event_Duration_Number_of_Days__c *10)
,0),
CASE(Actual_RFP_Type__c,
"Restaurant RFP",
(Actual_Attendee_count__c * VALUE(F_B__c)),
"Request for Information",
(Actual_Attendee_count__c * 0),
"Service Provider",0,
"Sleeping Rooms Only",
(Actual_Total_Room_Nights__c* ADR__c),
"Meeting Space and Sleeping Rooms",
(
(Actual_Total_Room_Nights__c*ADR__c)
+
(Actual_Attendee_count__c *Actual_Event_Duration_Number_of_Days__c*VALUE(F_B__c))
),
"Meeting Space Only",
(Actual_Attendee_count__c * Actual_Event_Duration_Number_of_Days__c *VALUE(F_B__c))
,0)
)</formula>
        <label>Audited EV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Audited_Sleep_Rooms_Multiple_Event_RFP__c</fullName>
        <formula>Actual_Total_Room_Nights__c  *  of_Events_covered_under_the_RFP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audited Sleep Rooms (Multiple Event RFP)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audited_Total_Attendees_Multiple_Event__c</fullName>
        <formula>Actual_Attendee_count__c  *  of_Events_covered_under_the_RFP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audited Total Attendees (Multiple Event)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audited__c</fullName>
        <formula>IF(OR( Text(RFP_Type__c) &lt;&gt; Text(Actual_RFP_Type__c) , Attendee_Count__c &lt;&gt; Actual_Attendee_count__c , Event_Duration_of_Days__c &lt;&gt; Actual_Event_Duration_Number_of_Days__c , RFP_Total_Room_Night__c &lt;&gt; Actual_Total_Room_Nights__c , of_Events_covered_under_the_RFP__c &gt;1),"Yes","No")</formula>
        <label>Audited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auidted_for__c</fullName>
        <label>Auidted for</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AC+EV</fullName>
                </value>
                <value>
                    <fullName>ED</fullName>
                </value>
                <value>
                    <fullName>ED+AC+EV</fullName>
                </value>
                <value>
                    <fullName>ED+EV</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>RN+AC+EV</fullName>
                </value>
                <value>
                    <fullName>RN+ED+AC+EV</fullName>
                </value>
                <value>
                    <fullName>RN+ED+EV</fullName>
                </value>
                <value>
                    <fullName>RN+EV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Sourcing_Cycle_In_Months__c</fullName>
        <label>Average Sourcing Cycle(In Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awarded_Date__c</fullName>
        <label>Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Awarded_Room_Nights__c</fullName>
        <formula>IF(ISPICKVAL( Status__c ,"Awarded"), RFP_Total_Room_Night__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Room Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awarded__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,"Awarded"),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <label>Batch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Rate__c</fullName>
        <formula>IF(of_Suppliers_Selected__c=0,0,(Bidded_RFPs__c / of_Suppliers_Selected__c ))</formula>
        <label>Bid Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bidded_RFPs__c</fullName>
        <label>Bidded RFPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budgeted_Room_Rate__c</fullName>
        <label>Budgeted Room Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <formula>if(ISPICKVAL(Status__c,"Cancelled"),True,False)</formula>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>REPEAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_RFP_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check RFP Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD Client</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Event AM</fullName>
                </value>
                <value>
                    <fullName>Event DS</fullName>
                </value>
                <value>
                    <fullName>PA Client</fullName>
                </value>
                <value>
                    <fullName>Survey Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Flag__c</fullName>
        <label>Commission Flag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name_File__c</fullName>
        <label>Company Name(File)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Unique RFPs (Contact)</relationshipLabel>
        <relationshipName>Unique_RFPs1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_by_RFP_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>box checked for all RFPs created by RFP builder team</description>
        <label>Created by RFP Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credited_to__c</fullName>
        <label>RFP Credited to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aanchal Verma</fullName>
                </value>
                <value>
                    <fullName>Abby Glackin</fullName>
                </value>
                <value>
                    <fullName>Abhishek Aman</fullName>
                </value>
                <value>
                    <fullName>AJ Jain</fullName>
                </value>
                <value>
                    <fullName>Alex Platia</fullName>
                </value>
                <value>
                    <fullName>Alice Dixon</fullName>
                </value>
                <value>
                    <fullName>Alina Stalletti</fullName>
                </value>
                <value>
                    <fullName>Allen Michael</fullName>
                </value>
                <value>
                    <fullName>Allie Pandelidis</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Amanda Mullens</fullName>
                </value>
                <value>
                    <fullName>Amy Chugh</fullName>
                </value>
                <value>
                    <fullName>Asha Agarwal</fullName>
                </value>
                <value>
                    <fullName>Austin Alam</fullName>
                </value>
                <value>
                    <fullName>Bailey Price</fullName>
                </value>
                <value>
                    <fullName>Ben Gambhir</fullName>
                </value>
                <value>
                    <fullName>Briana Evans</fullName>
                </value>
                <value>
                    <fullName>Brittlynn Goddard</fullName>
                </value>
                <value>
                    <fullName>Caitlin Kiely</fullName>
                </value>
                <value>
                    <fullName>Catherine Klein</fullName>
                </value>
                <value>
                    <fullName>David Riedel</fullName>
                </value>
                <value>
                    <fullName>Delaney Armstrong</fullName>
                </value>
                <value>
                    <fullName>Denise Farrell</fullName>
                </value>
                <value>
                    <fullName>Dustin Alonzo</fullName>
                </value>
                <value>
                    <fullName>Erin Dugan</fullName>
                </value>
                <value>
                    <fullName>Ethan John</fullName>
                </value>
                <value>
                    <fullName>Gabi Donchez</fullName>
                </value>
                <value>
                    <fullName>Gayathri Segar</fullName>
                </value>
                <value>
                    <fullName>Gillian Kulman</fullName>
                </value>
                <value>
                    <fullName>Greg Trivedi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DDP_Campaign__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DDP Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decision_Date_Passed__c</fullName>
        <formula>IF(Decision_Date__c=Today(),"NO",IF(Decision_Date__c&lt;Today(),"YES","NO"))</formula>
        <label>Decision Date Passed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Difference_in_OSD_RDD__c</fullName>
        <description>Difference in original sent date and response due date</description>
        <formula>Response_Date__c  - Original_Send_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference in Original Sent Date &amp; Response Due Date</inlineHelpText>
        <label>Difference in OSD &amp; RDD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dupe_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dupe_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate RFP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elq_Days_Count__c</fullName>
        <label>Elq-Days Count</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_Date__c</fullName>
        <label>Escalated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to automate the porcess with custom code.</description>
        <inlineHelpText>Clicking this check box will auto escalate all the 'awaiting proposal' RFP's.</inlineHelpText>
        <label>Escalated RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Esclated_by__c</fullName>
        <label>Escalated by</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Duration_of_Days__c</fullName>
        <formula>IF(Event_End_Date__c   - Event_Start_Date__c=0,1,Event_End_Date__c - Event_Start_Date__c + 1)</formula>
        <label>Event Duration (# of Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expo_Festival_Exhibition_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expo/Festival/Exhibition RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_B_Budget__c</fullName>
        <label>Food &amp; Beverage Budget</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F_B__c</fullName>
        <label>F&amp;B</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_Budget_Lunch_Dinner__c</fullName>
        <label>Food &amp; Beverage Budget (Lunch/Dinner)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2011 PA emarketing Campaign</fullName>
                </value>
                <value>
                    <fullName>AM-PA</fullName>
                </value>
                <value>
                    <fullName>Association Attack</fullName>
                </value>
                <value>
                    <fullName>BD Client</fullName>
                </value>
                <value>
                    <fullName>BD Client Demo Campaign</fullName>
                </value>
                <value>
                    <fullName>BD Prospect</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Client - Cold</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>CMS Webcast</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>CSN-No</fullName>
                </value>
                <value>
                    <fullName>CSN-Yes</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>EPAS Demo</fullName>
                </value>
                <value>
                    <fullName>Event Rep</fullName>
                </value>
                <value>
                    <fullName>FAM TRIP</fullName>
                </value>
                <value>
                    <fullName>Found on Own</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Inbound Enquiry</fullName>
                </value>
                <value>
                    <fullName>IRCEL Cold</fullName>
                </value>
                <value>
                    <fullName>Last Sourced Campaign</fullName>
                </value>
                <value>
                    <fullName>Marketing Demo</fullName>
                </value>
                <value>
                    <fullName>MexicoMeetingsNetwork</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reader Board</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>RFI Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lunch_Dinner_Attendees__c</fullName>
        <label>Lunch/Dinner Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Space_Needed__c</fullName>
        <label>Meeting Space Needed</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Orgs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Orgs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLD_PA_Economic_Value_del__c</fullName>
        <label>OLD PA Economic Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OLD_RFP_Value__c</fullName>
        <label>OLD RFP Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Send_Date__c</fullName>
        <label>Original Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outlier_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Outlier RFP. EV to be calculated $10/Attendee</inlineHelpText>
        <label>Outlier RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PA_Rep_Economic_Value__c</fullName>
        <formula>Case(RFP_Type__c, "Restaurant RFP", 50 * Attendee_Count__c , "Sleeping Rooms Only", 140 * RFP_Total_Room_Night__c *1.35, "Meeting Space and Sleeping Rooms", (140 * RFP_Total_Room_Night__c *1.35)+(Attendee_Count__c *Event_Duration_of_Days__c*35) , "Service Provider",50,"Meeting Space Only", 35 * Attendee_Count__c *Event_Duration_of_Days__c,0 )</formula>
        <label>Sourcing Rep Economic Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PA_Rep__c</fullName>
        <formula>TEXT( Planner_Ac__r.PA_Rep__c)</formula>
        <label>Sourcing Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Special_Project_RFP__c</fullName>
        <label>Sourcing Special Project (RFP)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Sub_Vertical_RFP__c</fullName>
        <label>Sourcing Sub Vertical (RFP)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Vertical_RFP__c</fullName>
        <label>Sourcing Vertical (RFP)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Ac__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planner A/c</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unique RFPs</relationshipLabel>
        <relationshipName>Unique_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planner_Account_Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <label>Planner Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planner Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unique RFPs (Planner Account Name)</relationshipLabel>
        <relationshipName>Unique_RFPs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planner_Account_Number__c</fullName>
        <label>Planner Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Account_State__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <label>Planner Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Account_Status__c</fullName>
        <formula>TEXT( Planner_Ac__r.Account_Status__c)</formula>
        <label>Planner Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Account_Zipcode__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <label>Planner Account Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Company__c</fullName>
        <formula>Planner_Ac__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planner Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Email_Address__c</fullName>
        <label>Planner Email Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Phone__c</fullName>
        <label>Planner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HC RFP</fullName>
                </value>
                <value>
                    <fullName>EMI RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Status__c</fullName>
        <label>Proposal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RFP Declined</fullName>
                </value>
                <value>
                    <fullName>RFP Cancelled</fullName>
                </value>
                <value>
                    <fullName>Booked Elsewhere</fullName>
                </value>
                <value>
                    <fullName>Awarded by Planner</fullName>
                </value>
                <value>
                    <fullName>Proposal Declined</fullName>
                </value>
                <value>
                    <fullName>Awaiting Proposal</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>RFP Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(MONTH( RFP_Send_Month__c ),1, "Q1",2, "Q1",3, "Q1",4, "Q2",5, "Q2",6, "Q2",7, "Q3",8, "Q3",9, "Q3",10, "Q4",11, "Q4",12, "Q4","")&amp;"-"&amp;Text(Year( RFP_Send_Month__c))</formula>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Audit_Notes__c</fullName>
        <label>RFP Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Awarded_outside_Cvent__c</fullName>
        <formula>If( AND(ISNULL(Original_Send_Date__c), ISPICKVAL(Status__c,"Awarded")),"YES","NO")</formula>
        <label>RFP Awarded outside Cvent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Builder_Lead_Source__c</fullName>
        <label>RFP Builder Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Google Lead</fullName>
                </value>
                <value>
                    <fullName>PA Rep</fullName>
                </value>
                <value>
                    <fullName>PA Chat</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Project Nucleus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Category__c</fullName>
        <formula>IF(ISNULL(Original_Send_Date__c),"NULL",IF(Planner_Ac__r.First_RFP_Sent_Month_P__c = RFP_Send_Month__c,"New","Repeat"))</formula>
        <label>RFP Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Code__c</fullName>
        <externalId>true</externalId>
        <label>RFP Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RFP_Delivered__c</fullName>
        <label>RFP Delivered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Description__c</fullName>
        <label>RFP Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Last_Modified_Date__c</fullName>
        <label>RFP Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RFP_Peak_Room_Night__c</fullName>
        <label>RFP Peak Room Night</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFP_Send_Date_Time__c</fullName>
        <label>RFP Send Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RFP_Send_Month__c</fullName>
        <formula>DATE(YEAR(Original_Send_Date__c),Month(Original_Send_Date__c),1)</formula>
        <label>RFP Send Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Sent_in_Last_1_Day__c</fullName>
        <formula>If((Today()-Original_Send_Date__c=1),"YES","NO")</formula>
        <label>RFP Sent in Last 1 Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFP_Sent_in_Last_2_Days__c</fullName>
        <formula>If((Today()-Original_Send_Date__c=2),"YES","NO")</formula>
        <label>RFP Sent in Last 2 Days</label>
        <type>Text</type>
    </fields>
</CustomObject>